# tocador

./: .gitignore  3d.html  CLAUDE.md  CNAME  Dockerfile  PROXY_SETUP.md  README.md  config.sample.json  haloy.sample.yaml  haloy.yaml  index.html  manifest.json  nginx.conf  package-lock.json  package.json  pipeline.md  playwright.config.js  proxy.js  radio.html  robots.txt  sitemap-albums.xml  sitemap-artists.xml  sitemap.xml  start.sh  subsonic.js  supervisord.conf  sw.js
.github/workflows/: deploy-proxy.yml  pages.yml  test.yml
assets/: player.css  uqt.css
config/: homi.json  uqt.json
data/: audd_extracted.json  singles_from_band_camp.csv
docs/: PROXY_SETUP.md
js/: ui.js
plans/: add-genre-and-artists.md  migrate_to_opus.md  p2p.md  todo.md  todo_analyses_later.md
script/: README.md  build-3d-atlas.js  build-genre-index.js  decode-cp850-filenames.py  dedup-albums.js  dedup-homi.js  delete-dup-folders.js  deploy.sh  enrich-singles-audd.js  extract-genres.js  extract-genres.py  fetch-covers.py  filter-albums-by-s3.js  find-untagged.js  fix-missing-tags.py  fix-singles-itunes.js  fix-tags-acoustid.py  fix-tags-audd.py  fix-tags-mbsearch.py  generate-albums.js  normalize-s3-keys.js  normalize-track-prefixes.js  normalize-track-prefixes.test.js  resize-cover-images.js  sync-covers-homi.js  sync-to-bucket.js  upload-uqt-covers.js  walkdir.test.js
script/generate-albums/: Cargo.toml
script/generate-albums/src/: main.rs
tests/: cdn.spec.js  proxy.test.js  radio.spec.js  simplify.spec.js  subsonic.test.js  uqt.spec.js
tests/fixtures/: albums.json
