[package]
name = "generate-albums"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-albums"
path = "src/main.rs"

[dependencies]
id3          = "1"
lofty        = "0.22"
rayon        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
flate2       = "1"
walkdir      = "2"
once_cell    = "1"
regex        = "1"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
